--- a/src/main/res/layout/ac_black_list_wrapper.xml
+++ b/src/main/res/layout/ac_black_list_wrapper.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!-- Этот layout служит только для загрузки фрагмента с черным списком -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/bg_main">
-
-    <fragment
-        android:tag="black_list_fragment"
-        android:name="com.topface.topface.ui.fragments.feed.BlackListFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</RelativeLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/blackList"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"></FrameLayout>
