#38982: some changes of buttons style

--- a/src/main/res/drawable/btn_sale_gray_disabled.xml
+++ b/src/main/res/drawable/btn_sale_gray_disabled.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/button_shadow" />
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="5dp" />
+            <corners android:radius="@dimen/button_corners_radius" />
             <solid android:color="#99efefef" />
         </shape>
     </item>
