--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -51,4 +51,7 @@
     <item name="actionbar_elevation" format="float" type="dimen">0.0</item>
 
     <dimen name="tab_bar_default_bottom_border_height">1px</dimen>
+
+    <!--Gray/Blue buttons corner radius-->
+    <dimen name="button_corners_radius">2dp</dimen>
 </resources>
