--- a/src/main/res/drawable/btn_blue_shape_pressed.xml
+++ b/src/main/res/drawable/btn_blue_shape_pressed.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="5dp" />
+    <corners android:radius="@dimen/button_corners_radius" />
     <solid android:color="#62c4f5" />
 </shape>
