--- a/src/main/res/drawable/btn_blue_shape_with_shadow_normal.xml
+++ b/src/main/res/drawable/btn_blue_shape_with_shadow_normal.xml
@@ -1,24 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="5dp" />
-            <gradient
-                android:angle="270"
-                android:endColor="#b6b6b6"
-                android:startColor="#dddddd" />
-        </shape>
-    </item>
-
-    <item
-        android:bottom="2dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp">
-        <shape android:shape="rectangle">
-            <solid android:color="#03a9f4" />
-
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
+    <item android:drawable="@drawable/button_shadow" />
+    <item android:drawable="@drawable/btn_blue_shape_normal" />
 </layer-list>
