--- a/src/main/res/layout/item_buying_btn.xml
+++ b/src/main/res/layout/item_buying_btn.xml
@@ -8,13 +8,10 @@
 
     <RelativeLayout
         android:id="@+id/itContainer"
+        style="@style/BigButtonsStyle"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
         android:layout_marginTop="12dp"
-        android:elevation="2dp"
         android:padding="5dp">
 
         <TextView
