--- a/src/main/res/layout/dialog_take_photo.xml
+++ b/src/main/res/layout/dialog_take_photo.xml
@@ -52,15 +52,13 @@
 
         <Button
             android:id="@+id/btnTakePhoto"
-            style="@style/ButtonWhiteText.Mini"
+            style="@style/ButtonWhiteText.Mini.Gray"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
             android:layout_weight="1"
-            android:background="@drawable/btn_gray_selector"
             android:padding="8dp"
-            android:text="@string/take_photo"
-            android:textColor="@drawable/btn_gray_text_color_selector" />
+            android:text="@string/take_photo" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -70,27 +68,23 @@
 
             <Button
                 android:id="@+id/btnTakeFormGallery"
-                style="@style/ButtonWhiteText.Mini"
+                style="@style/ButtonWhiteText.Mini.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_gray_selector"
                 android:padding="8dp"
-                android:text="@string/gallery"
-                android:textColor="@drawable/btn_gray_text_color_selector" />
+                android:text="@string/gallery" />
 
             <Button
                 android:id="@+id/btnSendPhoto"
-                style="@style/ButtonWhiteText.Mini"
+                style="@style/ButtonWhiteText.Mini.Blue"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_alignBottom="@id/btnTakeFormGallery"
                 android:layout_alignLeft="@id/btnTakeFormGallery"
                 android:layout_alignRight="@id/btnTakeFormGallery"
                 android:layout_alignTop="@id/btnTakeFormGallery"
-                android:background="@drawable/btn_blue_selector"
                 android:padding="8dp"
-                android:text="@string/general_send_full"
-                android:textColor="@drawable/btn_blue_text_color_selector" />
+                android:text="@string/general_send_full" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
