--- a/src/main/res/layout/fragment_buy.xml
+++ b/src/main/res/layout/fragment_buy.xml
@@ -10,12 +10,15 @@
 
         <com.topface.IllustratedTextView.IllustratedTextView
             android:id="@+id/payReasonFragmentBuy"
-            style="@style/PayReasonView" />
+            style="@style/PayReasonView"
+            android:paddingLeft="15dp" />
 
         <ViewStub
             android:id="@+id/EditorTestStub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout="@layout/fragment_buy_editor" />
 
         <LinearLayout
@@ -23,7 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
-            android:padding="14dp">
+            android:paddingBottom="14dp"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp">
 
             <TextView
                 android:id="@+id/fbBuyingDisabled"
