--- a/src/main/res/layout/layout_topface_signin.xml
+++ b/src/main/res/layout/layout_topface_signin.xml
@@ -124,7 +124,7 @@
 
             <TextView
                 android:id="@+id/tvRecoverPwd"
-                style="@style/AuthButtonsText"
+                style="@style/AuthButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="16dp"
