--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -4,6 +4,40 @@
     <style name="Widget">
     </style>
 
+    <style name="TopfaceAuthText">
+        <item name="android:layout_marginTop">28dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">@drawable/edittext_holo_selector</item>
+    </style>
+
+    <style name="AuthButton">
+        <item name="android:minHeight">40dp</item>
+        <item name="android:minWidth">212dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">start|center</item>
+    </style>
+
+    <style name="AuthButton.TfAccountButton">
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:paddingLeft">12dp</item>
+    </style>
+
+    <style name="TfRegButton">
+        <item name="android:minHeight">40dp</item>
+        <item name="android:minWidth">328dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="Widget.Topface.ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="backgroundStacked">@color/action_bar_color</item>
         <item name="backgroundSplit">@color/action_bar_color</item>
@@ -223,11 +257,6 @@
     <style name="AuthButtonsSmallText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">12sp</item>
-    </style>
-
-    <style name="AuthButtonsText">
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="AuthButtonsBigText">
