--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -95,11 +95,18 @@
 
     <color name="default_line_indicator_selected_color">@color/blue_holo_selected</color>
 
+    <!--Button gray text color in different states-->
     <color name="button_gray_text_pressed_color">#4B4B4B</color>
     <color name="button_gray_text_released_color">#4B4B4B</color>
     <color name="button_gray_text_disable_color">#c3c3c3</color>
 
+    <!--Button blue text color in different states-->
     <color name="button_blue_text_pressed_color">#FFFFFF</color>
     <color name="button_blue_text_released_color">#FFFFFF</color>
     <color name="button_blue_text_disable_color">#FFFFFF</color>
+
+    <!--Button red text color in different states-->
+    <color name="button_red_text_pressed_color">#FFFFFF</color>
+    <color name="button_red_text_released_color">#FFFFFF</color>
+    <color name="button_red_text_disable_color">#FFFFFF</color>
 </resources>
