--- a/src/main/res/layout/fragment_auth.xml
+++ b/src/main/res/layout/fragment_auth.xml
@@ -73,7 +73,7 @@
                 android:id="@+id/btnTfAccount"
                 style="@style/AuthButton"
                 android:layout_marginTop="44dp"
-                android:background="#FFFFFF"
+                android:background="@drawable/btn_white"
                 android:gravity="center"
                 android:text="@string/auth_btn_tf"
                 android:textColor="#03A9F4" />
@@ -82,7 +82,7 @@
                 android:id="@+id/btnEntrance"
                 style="@style/AuthButton.TfAccountButton"
                 android:drawableLeft="@drawable/ic_enter"
-                android:background="#03A9F4"
+                android:background="@drawable/btn_blue_selector"
                 android:text="@string/sign_in"
                 android:textColor="#FFFFFF"
                 android:visibility="gone" />
@@ -92,7 +92,7 @@
                 style="@style/AuthButton.TfAccountButton"
                 android:layout_marginTop="16dp"
                 android:drawableLeft="@drawable/ic_add"
-                android:background="#fff3f3f3"
+                android:background="@drawable/btn_gray_selector"
                 android:text="@string/create_account"
                 android:textColor="#4B4B4B"
                 android:visibility="gone" />
