--- a/src/main/res/layout/layout_topface_signin.xml
+++ b/src/main/res/layout/layout_topface_signin.xml
@@ -92,7 +92,7 @@
                     android:id="@+id/btnEntrance"
                     style="@style/TfRegButton"
                     android:layout_marginTop="28dp"
-                    android:background="#03A9F4"
+                    android:background="@drawable/btn_blue_selector"
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="@string/sign_in"
@@ -103,7 +103,7 @@
                     android:id="@+id/btnRecoverPassword"
                     style="@style/TfRegButton"
                     android:layout_marginTop="28dp"
-                    android:background="#FFF3F3F3"
+                    android:background="@drawable/btn_gray_selector"
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="@string/recover_password"
