--- a/src/main/res/layout/promo_express_messages.xml
+++ b/src/main/res/layout/promo_express_messages.xml
@@ -4,8 +4,7 @@
     android:id="@+id/loInvitesPopup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_60_percent"
-    android:orientation="vertical">
+    android:background="@color/black_60_percent">
 
     <LinearLayout
         android:layout_width="match_parent"
